--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://www.google.com/recaptcha/api.js?render=YOUR_SITE_KEY"></script>
     
     <!-- Data from data.js injected by Vite -->
     <title><%= siteTitle %></title>
@@ -15,7 +16,7 @@
     <meta property="og:title" content="<%= siteTitle %>" />
     <meta property="og:description" content="<%= siteDescription %>" />
     <meta property="og:image" content="/assets/images/og-image.jpg" />
-    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:url" content="https://www.globalbuscharters.com" />
     <meta property="og:type" content="website" />
     
     <!-- Twitter -->
